[gd_scene load_steps=56 format=2]

[ext_resource path="res://fish/guppy/images/guppy_small.png" type="Texture" id=1]
[ext_resource path="res://fish/guppy/images/guppy_medium_turning.png" type="Texture" id=2]
[ext_resource path="res://fish/guppy/images/guppy_medium_eating.png" type="Texture" id=3]
[ext_resource path="res://fish/guppy/images/guppy_large.png" type="Texture" id=4]
[ext_resource path="res://fish/guppy/images/guppy_small_turning.png" type="Texture" id=5]
[ext_resource path="res://fish/guppy/images/guppy_large_turning.png" type="Texture" id=6]
[ext_resource path="res://fish/guppy/images/guppy_large_eating.png" type="Texture" id=7]
[ext_resource path="res://fish/guppy/images/guppy_small_eating.png" type="Texture" id=8]
[ext_resource path="res://fish/guppy/images/guppy_medium.png" type="Texture" id=9]
[ext_resource path="res://fish/guppy/images/guppy_tiny_eating.png" type="Texture" id=10]
[ext_resource path="res://fish/AnimatedSprite.gd" type="Script" id=11]
[ext_resource path="res://fish/guppy/Guppy.gd" type="Script" id=12]
[ext_resource path="res://fish/guppy/images/guppy_tiny_turning.png" type="Texture" id=13]
[ext_resource path="res://fish/guppy/images/guppy_tiny.png" type="Texture" id=14]
[ext_resource path="res://audio/sounds/slurp.wav" type="AudioStream" id=15]

[sub_resource type="AtlasTexture" id=1]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 0, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 14 )
region = Rect2( 12, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 0, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 12, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 24, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 36, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 48, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 12, 10 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 12, 0, 12, 10 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 1 ), SubResource( 2 ) ],
"loop": true,
"name": "swim",
"speed": 10.0
}, {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "turn",
"speed": 20.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "eat",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 18, 16 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 18, 0, 18, 16 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 18, 16 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 18, 0, 18, 16 )

[sub_resource type="AtlasTexture" id=15]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 36, 0, 18, 16 )

[sub_resource type="AtlasTexture" id=16]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 54, 0, 18, 16 )

[sub_resource type="AtlasTexture" id=17]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 72, 0, 18, 16 )

[sub_resource type="AtlasTexture" id=18]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 18, 16 )

[sub_resource type="AtlasTexture" id=19]
flags = 4
atlas = ExtResource( 8 )
region = Rect2( 18, 0, 18, 16 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 11 ), SubResource( 12 ) ],
"loop": true,
"name": "swim",
"speed": 10.0
}, {
"frames": [ SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "turn",
"speed": 20.0
}, {
"frames": [ SubResource( 18 ), SubResource( 19 ) ],
"loop": true,
"name": "eat",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 27, 23 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 27, 0, 27, 23 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 27, 23 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 27, 0, 27, 23 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 54, 0, 27, 23 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 81, 0, 27, 23 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 108, 0, 27, 23 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 27, 23 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 27, 0, 27, 23 )

[sub_resource type="SpriteFrames" id=30]
animations = [ {
"frames": [ SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "swim",
"speed": 10.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "turn",
"speed": 20.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "eat",
"speed": 10.0
} ]

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 38, 31 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 38, 0, 38, 31 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 38, 31 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 38, 0, 38, 31 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 76, 0, 38, 31 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 114, 0, 38, 31 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 6 )
region = Rect2( 152, 0, 38, 31 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 38, 31 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 7 )
region = Rect2( 38, 0, 38, 31 )

[sub_resource type="SpriteFrames" id=40]
animations = [ {
"frames": [ SubResource( 31 ), SubResource( 32 ) ],
"loop": true,
"name": "swim",
"speed": 10.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), SubResource( 36 ), SubResource( 37 ) ],
"loop": true,
"name": "turn",
"speed": 20.0
}, {
"frames": [ SubResource( 38 ), SubResource( 39 ) ],
"loop": true,
"name": "eat",
"speed": 10.0
} ]

[node name="guppy" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 12 )

[node name="hunger_timer" type="Timer" parent="."]

[node name="drop_timer" type="Timer" parent="."]

[node name="tiny" type="AnimatedSprite" parent="."]
frames = SubResource( 10 )
animation = "turn"
script = ExtResource( 11 )

[node name="small" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 20 )
animation = "turn"
script = ExtResource( 11 )

[node name="medium" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 30 )
animation = "turn"
script = ExtResource( 11 )

[node name="large" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 40 )
animation = "turn"
script = ExtResource( 11 )

[node name="eat_sound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 15 )
